--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
-<html xmlns="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <th:block th:replace="fragments/styles :: bootStyle"></th:block>
+
 </head>
 
 <body>
+    <header>
+        <th:block th:replace="fragments/nav"></th:block>
+    </header>
 
 </body>
 
