--- a/src/main/resources/templates/fragments/styles.html
+++ b/src/main/resources/templates/fragments/styles.html
@@ -3,7 +3,8 @@
 <th:block>
     <th:block th:fragment="bootStyle">
         <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css}" th:rel="stylesheet">
-        <link rel="stylesheet" th:href="@{/css/styles.css}">
+        <!--         <link rel="stylesheet" th:href="@{/css/styles.css}">
+ -->
     </th:block>
 
 </html>
