--- a/src/main/resources/templates/pizze/index.html
+++ b/src/main/resources/templates/pizze/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <th:block th:replace="fragments/styles :: bootStyle"></th:block>
 
+    <title>Pizze</title>
 </head>
 
 <body>
-    <header>
-        <th:block th:replace="fragments/nav"></th:block>
-    </header>
-
+    <h1>Pizze</h1>
+    <hr />
+    <p th:text="${pizze}" class="m-3"></p>
 </body>
 
 </html>
