add images on the thymeleaf template

--- a/src/main/resources/templates/pizze/index.html
+++ b/src/main/resources/templates/pizze/index.html
@@ -21,6 +21,7 @@
                             <th>Nome</th>
                             <th>Descrizione</th>
                             <th>Prezzo</th>
+                            <th>Immagine</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -28,6 +29,7 @@
                             <td>[[*{name}]]</td>
                             <td>[[*{desc}]]</td>
                             <td>[[*{price}]]</td>
+                            <td><img th:src="*{url}" alt=""></td>
                         </tr>
                     </tbody>
                 </table>
