--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -6,5 +6,10 @@
 
 img {
     height: 200px;
-    width: 200px;
+    width: 200px !important;
+}
+
+a {
+    text-decoration: none;
+    color: black;
 }
