refactoring navbar on index and show templates

--- a/src/main/resources/templates/pizze/index.html
+++ b/src/main/resources/templates/pizze/index.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <th:block th:replace="fragments/styles :: bootStyle"></th:block>
 
-    <title>Pizze</title>
+    <title>Lista delle Pizze</title>
 </head>
 
 <body>
-    <h1>Pizze</h1>
-    <hr />
+    <header>
+        <th:block th:replace="fragments/nav"></th:block>
+
+    </header>
     <main class="container">
         <section class="row">
             <div class="col-12">
