create "create" and edit view

--- a/src/main/resources/templates/pizze/index.html
+++ b/src/main/resources/templates/pizze/index.html
@@ -37,6 +37,9 @@
                     </tbody>
                 </table>
                 <p th:text="No pizzas are available at the moment" th:unless="${pizze.size() > 0}"></p>
+                <div class="create">
+                    <a th:href="@{/pizze/create}" class="btn btn-primary m-4">Crea una nuova pizza</a>
+                </div>
             </div>
 
         </section>
