--- a/src/main/resources/templates/pizze/create.html
+++ b/src/main/resources/templates/pizze/create.html
@@ -33,7 +33,7 @@
                                         <li th:each="error : ${#fields.allErrors()}" th:text="${error}"></li>
                                     </ul>
                                 </div>
-                                <div class="mb-3">
+                                <div class="mb-3 py-1">
                                     <label for="name" class="form-label">Name:</label>
                                     <input type="text" class="form-control" id="name" th:field="*{name}">
                                 </div>
